Check allure history with failed case

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -57,6 +57,7 @@ jobs:
             ${{ runner.os }}-allure-history-
 
       - name: Run Maven Tests
+        continue-on-error: true
         if: always()
         env:
           DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
