--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -2,8 +2,36 @@ name: Run Tests and Send Allure Report
 
 on:
   workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to run tests on'
+        required: true
+        default: 'main'
+      retryType:
+        description: 'Retry type (immediate or after)'
+        required: true
+        default: 'immediate'
+        options:
+          - immediate
+          - after
+      retryCount:
+        description: 'Retry count (number of retries)'
+        required: true
+        default: 1
+      threadCount:
+        description: 'Thread count (number of threads)'
+        required: true
+        default: 3
+      parallel:
+        description: 'Parallel execution mode (classes, methods, tests)'
+        required: true
+        default: 'methods'
+        options:
+          - classes
+          - methods
+          - tests
   schedule:
-    - cron: "0 10 * * *"
+    - cron: "0 1 * * *"
 
 jobs:
   run-tests-and-send-report:
@@ -13,6 +41,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.branch }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -34,9 +64,6 @@ jobs:
           sudo unzip -o allure.zip -d /opt/allure
           sudo ln -s /opt/allure/allure-2.32.0/bin/allure /usr/bin/allure
 
-#      - name: Install GitHub CLI
-#        run: sudo apt-get install -y gh
-
       - name: Install Xvfb
         run: sudo apt-get update && sudo apt-get install -y xvfb
 
@@ -46,58 +73,26 @@ jobs:
       - name: Set DISPLAY variable
         run: export DISPLAY=:1
 
-      - name: Cached Allure history
-        continue-on-error: true
-        if: always()
-        uses: actions/cache@v4
-        with:
-          path: allure-report-cached/history
-          key: ${{ runner.os }}-allure-history-${{ github.run_id }}
-          restore-keys: |
-            ${{ runner.os }}-allure-history-
-
       - name: Run Maven Tests
-        continue-on-error: true
-        if: always()
         env:
-          DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
-        run: mvn clean test -DretryType=immediate -DretryCount=1 -DthreadCount=3 -Dparallel=methods
-
-      # Copy cached history to target/allure-results
-      - name: Copy cached history to target/allure-results
-        if: always()
-        continue-on-error: true
+          DISPLAY: :1
         run: |
-          mkdir -p target/allure-results/history
-          cp -r allure-report-cached/history/* target/allure-results/history/
+          mvn clean test \
+          -DretryType=${{ inputs.retryType }} \
+          -DretryCount=${{ inputs.retryCount }} \
+          -DthreadCount=${{ inputs.threadCount }} \
+          -Dparallel=${{ inputs.parallel }}
 
-      # Generate a new allure-report-cached with updated history
-      - name: Generate new Allure cached report
-        if: always()
-        run: allure generate target/allure-results --clean -o allure-report-cached
-
-#      - name: Save updated Allure history to cache
-#        if: always()
-#        uses: actions/cache/save@v4
-#        with:
-#          key: ${{ runner.os }}-allure-history
-#          path: allure-report-cached/history
-
-      # Generate final single-file HTML report
       - name: Generate final Allure HTML report
-        if: always()
         run: allure generate target/allure-results --single-file --clean -o allure-report
 
       - name: Get Current Date and Time
-        if: always()
         run: echo "timestamp=$(date '+%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
 
       - name: Rename Single File Report
-        if: always()
         run: mv allure-report/index.html allure-report/${{ env.timestamp }}_report.html
 
       - name: Send Email with Allure HTML Report
-        if: always()
         uses: dawidd6/action-send-mail@v4
         with:
           server_address: smtp.gmail.com
