--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -3,14 +3,11 @@ name: Run Tests and Send Allure Report
 on:
   workflow_dispatch:
     inputs:
-      branch:
-        description: 'Branch to run tests on'
-        required: true
-        default: 'main'
       retryType:
         description: 'Retry type (immediate or after)'
         required: true
         default: 'immediate'
+        type: choice
         options:
           - immediate
           - after
@@ -26,6 +23,7 @@ on:
         description: 'Parallel execution mode (classes, methods, tests)'
         required: true
         default: 'methods'
+        type: choice
         options:
           - classes
           - methods
@@ -41,8 +39,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          ref: ${{ inputs.branch }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -64,18 +60,18 @@ jobs:
           sudo unzip -o allure.zip -d /opt/allure
           sudo ln -s /opt/allure/allure-2.32.0/bin/allure /usr/bin/allure
 
-      - name: Install Xvfb
-        run: sudo apt-get update && sudo apt-get install -y xvfb
-
-      - name: Start Xvfb
-        run: Xvfb :1 -screen 0 1920x1080x24 &
-
-      - name: Set DISPLAY variable
-        run: export DISPLAY=:1
+#      - name: Install Xvfb
+#        run: sudo apt-get update && sudo apt-get install -y xvfb
+#
+#      - name: Start Xvfb
+#        run: Xvfb :1 -screen 0 1920x1080x24 &
+#
+#      - name: Set DISPLAY variable
+#        run: export DISPLAY=:1
 
       - name: Run Maven Tests
-        env:
-          DISPLAY: :1
+#        env:
+#          DISPLAY: :1
         run: |
           mvn clean test \
           -DretryType=${{ inputs.retryType }} \
