--- a/src/test/resources/browser-config.properties
+++ b/src/test/resources/browser-config.properties
@@ -1,7 +1,7 @@
 # Chrome
 chrome.browser=chrome
 chrome.isMaximized=false
-chrome.headless=false
+chrome.headless=true
 chrome.gridUrl=
 
 # Firefox
