--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,4 +1,4 @@
-name: Run Tests and Send Allure Report
+name: CI - Run Tests and Send Report
 
 on:
   workflow_dispatch:
@@ -25,9 +25,9 @@ on:
         default: 'methods'
         type: choice
         options:
+          - tests
           - classes
           - methods
-          - tests
   schedule:
     - cron: "0 1 * * *"
 
@@ -69,9 +69,21 @@ jobs:
 #      - name: Set DISPLAY variable
 #        run: export DISPLAY=:1
 
+      - name: Cached Allure history
+        continue-on-error: true
+        if: always()
+        uses: actions/cache@v4
+        with:
+          path: allure-report-cached/history
+          key: ${{ runner.os }}-allure-history-${{ github.run_id }}
+          restore-keys: |
+            ${{ runner.os }}-allure-history-
+
       - name: Run Maven Tests
+        continue-on-error: true
+        if: always()
 #        env:
-#          DISPLAY: :1
+#          DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
         run: |
           mvn clean test \
           -DretryType=${{ inputs.retryType }} \
@@ -79,16 +91,34 @@ jobs:
           -DthreadCount=${{ inputs.threadCount }} \
           -Dparallel=${{ inputs.parallel }}
 
+      # Copy cached history to target/allure-results
+      - name: Copy cached history to target/allure-results
+        if: always()
+        continue-on-error: true
+        run: |
+          mkdir -p target/allure-results/history
+          cp -r allure-report-cached/history/* target/allure-results/history/
+
+      # Generate a new allure-report-cached with updated history
+      - name: Generate new Allure cached report
+        if: always()
+        run: allure generate target/allure-results --clean -o allure-report-cached
+
+      # Generate final single-file HTML report
       - name: Generate final Allure HTML report
+        if: always()
         run: allure generate target/allure-results --single-file --clean -o allure-report
 
       - name: Get Current Date and Time
+        if: always()
         run: echo "timestamp=$(date '+%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
 
       - name: Rename Single File Report
+        if: always()
         run: mv allure-report/index.html allure-report/${{ env.timestamp }}_report.html
 
       - name: Send Email with Allure HTML Report
+        if: always()
         uses: dawidd6/action-send-mail@v4
         with:
           server_address: smtp.gmail.com
