--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,9 +1,35 @@
-name: Run Tests and Send Allure Report
+name: CI - Run Tests and Send Report
 
 on:
   workflow_dispatch:
+    inputs:
+      retryType:
+        description: 'Retry type (immediate or after)'
+        required: true
+        default: 'immediate'
+        type: choice
+        options:
+          - immediate
+          - after
+      retryCount:
+        description: 'Retry count (number of retries)'
+        required: true
+        default: 1
+      threadCount:
+        description: 'Thread count (number of threads)'
+        required: true
+        default: 3
+      parallel:
+        description: 'Parallel execution mode (classes, methods, tests)'
+        required: true
+        default: 'methods'
+        type: choice
+        options:
+          - tests
+          - classes
+          - methods
   schedule:
-    - cron: "0 10 * * *"
+    - cron: "0 1 * * *"
 
 jobs:
   run-tests-and-send-report:
@@ -20,8 +46,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v3
+      - name: Cache local Maven repository
+        uses: actions/cache@v4
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
@@ -30,37 +56,66 @@ jobs:
 
       - name: Install Allure CLI
         run: |
-            curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/download/2.32.0/allure-2.32.0.zip
-            sudo unzip -o allure.zip -d /opt/allure
-            sudo ln -s /opt/allure/allure-2.32.0/bin/allure /usr/bin/allure
+          curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/download/2.32.0/allure-2.32.0.zip
+          sudo unzip -o allure.zip -d /opt/allure
+          sudo ln -s /opt/allure/allure-2.32.0/bin/allure /usr/bin/allure
 
-      - name: Verify Allure Installation
-        run: allure --version
+#      - name: Install Xvfb
+#        run: sudo apt-get update && sudo apt-get install -y xvfb
+#
+#      - name: Start Xvfb
+#        run: Xvfb :1 -screen 0 1920x1080x24 &
+#
+#      - name: Set DISPLAY variable
+#        run: export DISPLAY=:1
 
-      - name: Install Xvfb
-        run: sudo apt-get update && sudo apt-get install -y xvfb
-
-      - name: Start Xvfb
-        run: Xvfb :1 -screen 0 1920x1080x24 &
-
-      - name: Set DISPLAY variable
-        run: export DISPLAY=:1
+      - name: Cached Allure history
+        continue-on-error: true
+        if: always()
+        uses: actions/cache@v4
+        with:
+          path: allure-report-cached/history
+          key: ${{ runner.os }}-allure-history-${{ github.run_id }}
+          restore-keys: |
+            ${{ runner.os }}-allure-history-
 
       - name: Run Maven Tests
-        env:
-          DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
-        run: mvn clean test
+        continue-on-error: true
+        if: always()
+#        env:
+#          DISPLAY: :1 # IMPORTANT: Set the DISPLAY environment variable
+        run: |
+          mvn clean test \
+          -DretryType=${{ inputs.retryType }} \
+          -DretryCount=${{ inputs.retryCount }} \
+          -DthreadCount=${{ inputs.threadCount }} \
+          -Dparallel=${{ inputs.parallel }}
+
+      # Copy cached history to target/allure-results
+      - name: Copy cached history to target/allure-results
+        if: always()
+        continue-on-error: true
+        run: |
+          mkdir -p target/allure-results/history
+          cp -r allure-report-cached/history/* target/allure-results/history/
+
+      # Generate a new allure-report-cached with updated history
+      - name: Generate new Allure cached report
+        if: always()
+        run: allure generate target/allure-results --clean -o allure-report-cached
+
+      # Generate final single-file HTML report
+      - name: Generate final Allure HTML report
+        if: always()
+        run: allure generate target/allure-results --single-file --clean -o allure-report
 
       - name: Get Current Date and Time
         if: always()
-        id: date
         run: echo "timestamp=$(date '+%Y-%m-%d_%H-%M-%S')" >> $GITHUB_ENV
 
-      - name: Generate Allure Report (HTML)
+      - name: Rename Single File Report
         if: always()
-        run: |
-          allure generate target/allure-results --single-file --clean -o allure-report
-          mv allure-report/index.html allure-report/${{ env.timestamp }}_report_.html
+        run: mv allure-report/index.html allure-report/${{ env.timestamp }}_report.html
 
       - name: Send Email with Allure HTML Report
         if: always()
@@ -80,4 +135,4 @@ jobs:
             <p>Đây là báo cáo kiểm thử tự động từ GitHub Actions.</p>
             <p>Thời gian kiểm thử: <strong>${{ env.timestamp }}</strong></p>
             <p>Vui lòng xem báo cáo HTML đính kèm.</p>
-          attachments: allure-report/${{ env.timestamp }}_report_.html
+          attachments: allure-report/${{ env.timestamp }}_report.html
