--- a/src/test/resources/selenide.properties
+++ b/src/test/resources/selenide.properties
@@ -1,5 +1,4 @@
-browser=chrome
-baseUrl=https://www.vietjetair.com/
-timeout=5000
-headless=true
-remote=
+selenide.browser=chrome
+#selenide.baseUrl="https://www.vietjetair.com/"
+selenide.timeout=5000
+selenide.headless=false
