--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <aspectj.version>1.9.22.1</aspectj.version>
         <suiteXmlFile>src/test/resources/vietjetTest.xml</suiteXmlFile>
         <parallel>classes</parallel>
         <threadCount>1</threadCount>
-        <language>en</language>
+        <language>ko</language>
         <retryType>none</retryType>
         <retryCount>0</retryCount>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.codeborne</groupId>
             <artifactId>selenide</artifactId>
-            <version>7.6.1</version> <!-- Latest -->
+            <version>7.6.1</version>
         </dependency>
 
         <dependency>
@@ -47,14 +47,14 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-selenide</artifactId>
-            <version>2.29.1</version> <!-- Latest -->
+            <version>2.29.1</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <version>2.29.1</version> <!-- Latest -->
+            <version>2.29.1</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
@@ -108,7 +108,6 @@
                         </property>
                     </systemProperties>
                     <systemPropertyVariables>
-                        <!--                        <selenide.headless>false</selenide.headless>-->
                         <parallel>${parallel}</parallel>
                         <threadCount>${threadCount}</threadCount>
                         <language>${language}</language>
@@ -127,7 +126,7 @@
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.15.2</version> <!-- Latest -->
+                <version>2.15.2</version>
                 <configuration>
                     <reportVersion>2.32.0</reportVersion>
                 </configuration>
