--- a/src/test/resources/selenide.properties
+++ b/src/test/resources/selenide.properties
@@ -1,4 +1,4 @@
 selenide.browser=chrome
-#selenide.baseUrl="https://www.vietjetair.com/"
-selenide.timeout=5000
+selenide.baseUrl=https://www.vietjetair.com/
+selenide.timeout=6000
 selenide.headless=false
