--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,24 @@
             <version>15.0</version>
             <scope>compile</scope>
         </dependency>
+        <!-- JSoup cho phân tích HTML -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.17.2</version>
+        </dependency>
+
+        <!-- Apache POI cho đọc Excel -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version>
+        </dependency>
 
 
     </dependencies>
