--- a/src/test/resources/selenide.properties
+++ b/src/test/resources/selenide.properties
@@ -1,4 +1,4 @@
 selenide.browser=chrome
-selenide.baseUrl=https://store.leapfrog.com/en-us/apps/c?p=1&platforms=197&product_list_dir=asc&product_list_order=name
+selenide.baseUrl=https://www.agoda.com/
 selenide.timeout=6000
 selenide.headless=false
